--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,6 @@ repos:
         types: [python]
         pass_filenames: false
 
-
       - id: black
         name: black
         entry: poetry run black .
@@ -16,16 +15,8 @@ repos:
         types: [python]
         pass_filenames: false
 
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v6.0.0  # актуальная версия
+    hooks:
       - id: end-of-file-fixer
-        name: fix end of file
-        entry: poetry run pre-commit-hooks end-of-file-fixer
-        language: system
-        types: [text]
-        pass_filenames: false
-
       - id: trailing-whitespace
-        name: remove trailing whitespace
-        entry: poetry run pre-commit-hooks trailing-whitespace
-        language: system
-        types: [text]
-        pass_filenames: false
