--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "six==1.17.0",
     "snowballstemmer==3.0.1",
     "tzdata==2025.2",
-    "seaborn (>=0.13.2,<0.14.0)"
+    "seaborn (>=0.13.2,<0.14.0)",
+    "pytest (>=8.4.2,<9.0.0)"
 ]
 
 [tool.poetry.group.dev.dependencies]
@@ -61,4 +62,3 @@ known_first_party = ["innowise_bigdata_trainee_tasks"]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
