--- a/TASKS/task_5/log4j2.properties
+++ b/TASKS/task_5/log4j2.properties
@@ -1,19 +1,19 @@
+# Уровень логирования по умолчанию
 status = error
-name = SparkLogConfig
+name = PropertiesConfig
 
-filters = threshold
+# Логгер для Spark
+logger.spark.name = org.apache.spark
+logger.spark.level = INFO
 
-filter.threshold.type = ThresholdFilter
-filter.threshold.level = error
+# Аппендер для файла
+appender.file.type = File
+appender.file.name = FILE
+appender.file.fileName = ../../logs/task_5/spark.log
+appender.file.layout.type = PatternLayout
+appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-appenders = console
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.target = SYSTEM_OUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %m%n
-
-loggers = root
-logger.root.level = error
-logger.root.appenderRefs = stdout
-logger.root.appenderRef.stdout.ref = STDOUT
+# Root логгер
+rootLogger.level = INFO
+rootLogger.appenderRefs = file
+rootLogger.appenderRef.file.ref = FILE
