--- a/docker_compose/spark_docker/docker-compose.yml
+++ b/docker_compose/spark_docker/docker-compose.yml
@@ -1,23 +1,24 @@
-version: "3"
+version: "3.9"
+
 services:
   spark-master:
-    image: apache/spark:3.5.1
+    image: bde2020/spark-master.3.0-hadoop3.3
     container_name: spark-master
-    command: bin/spark-class org.apache.spark.deploy.master.Master
     environment:
-      - SPARK_MASTER_HOST=spark-master
-      - SPARK_LOCAL_IP=spark-master
+      - INIT_DAEMON_STEP=setup_spark
+      - SPARK_MODE=master
     ports:
       - "8080:8080"
       - "7077:7077"
 
-  spark-worker:
-    image: apache/spark:3.5.1
-    container_name: spark-worker
-    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+  spark-worker-1:
+    image: bde2020/spark-worker:3.3.0-hadoop3.3
+    container_name: spark-worker-1
     depends_on:
       - spark-master
     environment:
+      - SPARK_MASTER=spark://spark-master:7077
       - SPARK_WORKER_CORES=2
-      - SPARK_WORKER_MEMORY=2g
-      - SPARK_LOCAL_IP=spark-worker
+      - SPARK_WORKER_MEMORY=2G
+    ports:
+      - "8081:8081"
